--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+body{
+  background: #1f243d;
+  color: aliceblue;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +38,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+li{
+  display: flex;
+  flex-direction: column;
 }
